notebook delete + test
